<resources>
    <string name="app_name">USTH Weather(fix\</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Monday" translatable="false">MON</string>
    <string name="Tuesday" translatable="false">TUE</string>
    <string name="Wednesday" translatable="false">WED</string>
    <string name="Thursday" translatable="false">THU</string>
    <string name="Friday" translatable="false">FRI</string>
    <string name="Saturday" translatable="false">SAT</string>
    <string name="Sunday" translatable="false">SUN</string>
    <string name="cloudy" translatable="false">cloudy</string>
    <string name="clear" translatable="false">clear</string>
    <string name="drizzle" translatable="false">drizzle</string>
    <string name="mist" translatable="false">mist</string>
    <string name="rain" translatable="false">rain</string>
    <string name="humidity" translatable="false">humidity</string>
</resources>