<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_forecast"
    android:background="#FFFFFF">


    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/weather_container">

 <LinearLayout
     android:id="@+id/item1"
     android:layout_width="940dp"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="4px" >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="73dp"
             android:gravity="center"
             android:paddingLeft="9px"
             android:paddingRight="9px"
             android:text="@string/Monday" />


         <ImageView
             android:layout_width="70dp"
             android:layout_height="69dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:src="@drawable/drizzle" />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="5dp"
             android:text="@string/cloudy"
             android:layout_gravity="center_vertical" />
 </LinearLayout>
    <LinearLayout
        android:id="@+id/item2"
        android:layout_width="940dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4px" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:gravity="center"
                android:paddingLeft="9px"
                android:paddingRight="9px"
                android:text="@string/Tuesday" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="69dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/clear" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/clear"
                android:layout_gravity="center_vertical" />


</LinearLayout>
    <LinearLayout
        android:id="@+id/item3"
        android:layout_width="940dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4px" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:gravity="center"
                android:paddingLeft="9px"
                android:paddingRight="9px"
                android:text="@string/Wednesday" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="69dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/drizzle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/drizzle"
                android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item4"
        android:layout_width="940dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4px" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:gravity="center"
                android:paddingLeft="9px"
                android:paddingRight="9px"
                android:text="@string/Thursday" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="69dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/clouds" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/cloudy"
                android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item5"
        android:layout_width="940dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4px" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:gravity="center"
                android:paddingLeft="9px"
                android:paddingRight="9px"
                android:text="@string/Friday" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="69dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/drizzle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/drizzle"
                android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item6"
        android:layout_width="940dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4px" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:gravity="center"
                android:paddingLeft="9px"
                android:paddingRight="9px"
                android:text="@string/Saturday" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="69dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/clear"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/clear"
                android:layout_gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/item7"
        android:layout_width="940dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4px" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:gravity="center"
                android:paddingLeft="9px"
                android:paddingRight="9px"
                android:text="@string/Sunday" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="69dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/rain" />

             <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/rain"
                android:layout_gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



